fix: scrollbar

--- a/src/components/CartModal/CartModal.module.css
+++ b/src/components/CartModal/CartModal.module.css
@@ -35,8 +35,18 @@
 }
 
 .content {
-    overflow: auto;
+    overflow: scroll;
     overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .content__empty {
